# UMG-Android

./: .gitignore  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  chat.c  chat.h  main.c
